--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -61,6 +61,7 @@
                         <exclude>profiles.xml</exclude>
                         <exclude>catalog.xml</exclude>
                         <exclude>.gitignore</exclude>
+                        <exclude>.idea/**</exclude>
                     </excludes>
                     <properties>
                         <name>${project.name}</name>
