--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <version>1.0-SNAPSHOT</version>
     <name>Frontend taglib</name>
     <url>https://github.com/benfante/frontend-taglib</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>    
     <build>
         <plugins>
             <plugin>
@@ -17,6 +20,7 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
@@ -140,6 +144,11 @@
                 <artifactId>spring-test</artifactId>
                 <version>3.0.7.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
         </dependencies>       
     </dependencyManagement>
     <dependencies>
@@ -173,6 +182,10 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
         </dependency>
     </dependencies>
 </project>
